Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Kenmaster2.github.io by kenmaster2</title>
+    <title>生如夏花 by kenmaster2</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -16,9 +16,9 @@
   </head>
   <body>
     <div class="wrapper">
-      <header class="without-description">
-        <h1>Kenmaster2.github.io</h1>
-        <p></p>
+      <header>
+        <h1>生如夏花</h1>
+        <p>Less is more 简约即美~</p>
         <p class="view"><a href="https://github.com/kenmaster2">View the Project on GitHub <small>kenmaster2</small></a></p>
         <ul>
           <li class="single"><a href="https://github.com/kenmaster2/kenmaster2.github.io">View On <strong>GitHub</strong></a></li>
